# codespace_algorand

./: .devcontainer.json  .env  .sesskey  README.md  algorand_setup.sh  cuenta.py  main.py  post-create.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: python-app.yml
