[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Vijay <138977952+Vijaykrishna31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
