[tool.poetry]
name = "codespace-algo-first"
version = "0.1.0"
description = ""
authors = ["Ansar Afsar <83577572+Ansarafsar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
